# BakAndInstalle

./: CMakeLists.txt  README.org  app.db  dbAPI.c  dbAPI.h  deploy.c  deploy.h  init.c  init.h  main.c  openURL.h  sysUtil.h  tui.c  tui.h
.omo/run-continuation/: ses_12b3afb0fffegaJZcSjrW4o8gh.json
platform/Linux/: openURL.c  sysUtil.c
platform/Windows/: openURL.c  sysUtil.c
platform/macOS/: openURL.c  sysUtil.c
